WikiGanttChartPlugin: fixed tooltip wrongly showing with empty fields (refs #11910)
git-svn-id: http://trac-hacks.org/svn@14073 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/wikiganttchartplugin/0.12/wikiganttchart/htdocs/js/templates/gantt-popup.html
+++ b/wikiganttchartplugin/0.12/wikiganttchart/htdocs/js/templates/gantt-popup.html
@@ -1,23 +1,23 @@
 <div class="rmgantt-tooltip">
-    <h5>{{if task.data.ticket}}{{:task.data.linkToTicket}} {{/if}}{{>task.data.subjectName}}</h5>
-    <dl>
-        <dt>{{>regional.owner}}</dt>
-        <dd>
-            {{if data.owner}}
-                {{>data.owner.join(',')}}
-            {{/if}}
-        </dd>
-        <dt>{{>regional.date}}</dt>
-        <dd>
-            {{if task.startDate || task.dueDate}}
-                {{>task.startDatePrintableLong}} ~ {{>task.dueDatePrintableLong}}
-            {{/if}}
-        </dd>
-        <dt>{{>regional.progress}}</dt>
-        <dd>
-            {{if task.ratio}}
-                {{>task.ratio}} %
-            {{/if}}
-        </dd>
-    </dl>
+  <h5>{{if task.data.ticket}}{{:task.data.linkToTicket}} {{/if}}{{>task.data.subjectName}}</h5>
+  <table>
+    <tbody>
+      <tr>
+        <th>{{>regional.owner}}:</th>
+        <td>{{if data.owner}}{{>data.owner.join(',')}}{{/if}}</td>
+      </tr>
+      <tr>
+        <th>{{>regional.date}}:</th>
+        <td>
+          {{if task.startDate || task.dueDate}}
+            {{>task.startDatePrintableLong}} ~ {{>task.dueDatePrintableLong}}
+          {{/if}}
+        </td>
+      </tr>
+      <tr>
+        <th>{{>regional.progress}}:</th>
+        <td>{{if task.ratio}}{{>task.ratio}} %{{/if}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
