--- a/wikiganttchartplugin/0.12/wikiganttchart/htdocs/css/gantt.css
+++ b/wikiganttchartplugin/0.12/wikiganttchart/htdocs/css/gantt.css
@@ -1,4 +1,5 @@
 .wikiganttchartmacro { clear: both }
+
 .rmgantt { margin: 20px auto; width: 100% }
 .rmgantt .header {
  display: table;
@@ -268,33 +269,28 @@
 .rmgantt-tooltip {
  display: none;
  position: absolute;
- min-width: 16em;
  z-index: 99999;
  padding: 3px;
  background: #fff;
  color: #000000;
  border: 1px solid #aaaaaa;
  margin: 0px;
+ padding: 0 0.5em;
  -webkit-box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
  box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
 }
 .rmgantt-tooltip h5,
-.rmgantt-tooltip dl {
- margin: 0.5em;
+.rmgantt-tooltip table {
+ margin: 0.5em 0;
  padding: 0;
+ font-size: 100%;
+ width: 15em;
+ table-layout: fixed;
+ border-collapse: collapse;
 }
-.rmgantt-tooltip dt {
- clear: left;
- float: left;
- width: 4.5em;
- font-weight: bold;
- line-height: 1.2em;
-}
-.rmgantt-tooltip dt:after { content: ":" }
-.rmgantt-tooltip dd {
- margin-left: 4.5em;
- line-height: 1.2em;
-}
+.rmgantt-tooltip table th { width: 5em; padding: 0; font-weight: bold; text-align: left }
+.rmgantt-tooltip table td { width: 15em; padding: 0 }
+
 .icon:before {
  content: '-';
  display: inline-block;
