TicketImportPlugin: follow-up to r18418, fix compatible with Trac 1.6
git-svn-id: https://trac-hacks.org/svn@18620 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/ticketimportplugin/1.0/talm_importer/templates/jinja2/import_preview.html
+++ b/ticketimportplugin/1.0/talm_importer/templates/jinja2/import_preview.html
@@ -14,7 +14,7 @@
   <body>
     # block content
     <div id="content" class="report">
-      <h1>$title</h1>
+      <h1>${title}</h1>
       # if message:
       <div id="description" xml:space="preserve">${message}</div>
       # endif
