--- a/ccselectorplugin/trunk/cc_selector/templates/cc_selector_jinja.html
+++ b/ccselectorplugin/trunk/cc_selector/templates/cc_selector_jinja.html
@@ -59,7 +59,7 @@
     <p>
       <input type="button" name="btt_close"
              value="${_('Close')}"
-             title="_${_('Back to ticket editor')}" onclick="window.close()" />
+             title="${_('Back to ticket editor')}" onclick="window.close()" />
     </p>
     # endif
   </body>
