--- a/xmlrpcplugin/trunk/tracrpc/templates/rpc_jinja.html
+++ b/xmlrpcplugin/trunk/tracrpc/templates/rpc_jinja.html
@@ -1,107 +1,110 @@
 # extends 'layout.html'
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>
-      # block title
-      Remote Procedure Call (RPC)
-      ${ super() }
-      # endblock title
-    </title>
-    # block head
-    ${ super() }
-    # endblock
-  </head>
-  <body>
-    # block content
-    <div id="content" class="wiki">
-      <div class="wikipage searchable">
-        <div id="wikipage" class="trac-content borderless">
-          <h1 class="section">Remote Procedure Call (RPC)</h1>
-          <p><strong>Installed API version :</strong> ${rpc.version} </p>
-          <h2 id="Protocols" class="section">Protocol reference:</h2>
-          <p>Below you will find a detailed description of all the RPC
-            protocols installed in this environment. This includes
-            supported content types as well as target URLs for
-            anonymous and authenticated access. Use this
-            information to interact with this environment from
-            a remote location.
-          </p>
-          <p>Libraries for remote procedure calls and parsing exists
-            for most major languages and platforms - use a tested, standard library
-            for consistent results.</p>
+# set _ = partial(dgettext, domain)
+# set tag_ = partial(dtgettext, domain)
+# set title = _("Remote Procedure Call (RPC)")
 
-          # for protocol in rpc.protocols:
+# block title
+${title} ${ super() }
+# endblock title
+
+# block content
+  <div id="content" class="wiki">
+    <div class="wikipage searchable">
+      <div id="wikipage" class="trac-content borderless">
+        <h1 class="section">${title}</h1>
+        <p><strong>${_("Installed API version:")}</strong> ${rpc.version}</p>
+        <h2 id="Protocols" class="section">${_("Protocol reference:")}</h2>
+        <p>${
+          _("Below you will find a detailed description of all the RPC "
+            "protocols installed in this environment. This includes supported "
+            "content types as well as target URLs for anonymous and "
+            "authenticated access. Use this information to interact with this "
+            "environment from a remote location.")
+        }</p>
+        <p>${
+          _("Libraries for remote procedure calls and parsing exists for most "
+            "major languages and platforms - use a tested, standard library "
+            "for consistent results.")
+        }</p>
+
+        # for name, description, paths in rpc.protocols:
+        <dl>
+          <h3 id="${name}" class="section">${name}</h3>
+          <dd>
+            <p>${_("For %(name)s protocol, use any one of:", name=name)}</p>
+            <ul>
+              # for ct, ct_group in paths|groupby(1):
+              #   with ct_group = ct_group|list
+              <li>
+                ${tag_("%(header)s header with request to:",
+                       header=tag.tt('Content-Type: ', ct))}
+                <ul>
+                  <li>
+                    ${_("For anonymous access:")}
+                    <ul>
+                      # for h, mimetype in ct_group:
+                      #   with url = req.abs_href(h)
+                      <li><a href="${url}">${url}</a></li>
+                      #   endwith
+                      # endfor
+                    </ul>
+                  </li>
+                  <li>
+                    ${_("For authenticated access:")}
+                    <ul>
+                      # for h, mimetype in ct_group:
+                      #   with url = req.abs_href.login(h)
+                      <li>
+                        <a href="${url}">${url}</a>
+                      </li>
+                      #   endwith
+                      # endfor
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              #   endwith
+              # endfor
+            </ul>
+            <div>${wiki_to_html(context, description)}</div>
+          </dd>
+        </dl>
+        # endfor
+
+        <h2 id="Methods" class="section">${_("RPC exported functions")}</h2>
+
+        <div id="searchable">
+          # for key in rpc.functions|sort:
           <dl>
-            <h3 id="${protocol[0]}" class="section">${protocol[0]}</h3>
+            # set ns = rpc.functions[key]
+            <h3 id="${'rpc.%s'|format(ns.namespace)}" class="section">
+              ${ns.namespace} - ${ns.description}
+            </h3>
             <dd>
-              <p>For ${protocol[0]} protocol, use any one of:</p>
-              <ul>
-                # for ct, _ct_group in protocol[2]|groupby(1):
-                <li>
-                  <tt>Content-Type: ${ct}</tt> header with request to:
-                  # with
-                  #    set ct_group = _ct_group|list
-                  <ul>
-                    # for h, _ in ct_group:
-                    <li>
-                      <a href="${req.abs_href(h)}">${req.abs_href(h)}</a>
-                      for anonymous access
-                    </li>
-                    # endfor
-                    # for h, _ in ct_group:
-                    <li>
-                      <a href="${req.abs_href.login(h)}">${req.abs_href.login(h)}</a>
-                      for authenticated access
-                    </li>
-                    # endfor
-                  </ul>
-                  # endwith
-                </li>
-                # endfor
-              </ul>
-              <div>${wiki_to_html(context, protocol[1])}</div>
+              <table class="listing tickets">
+                <thead>
+                  <tr>
+                    <th style="width:40%">${_("Function")}</th>
+                    <th style="width:45%">${_("Description")}</th>
+                    <th style="width:15%">${_("Permission required")}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  # for signature, description, permission in ns.methods:
+                  <tr class="${'color3-%s'|format('even' if loop.index0 % 2 == 0 else 'odd')}">
+                    <td style="padding-left:4em;text-indent:-4em">${signature}</td>
+                    <td>${description}</td>
+                    <td>${permission or _("By resource")}</td>
+                  </tr>
+                  # endfor
+                </tbody>
+              </table>
             </dd>
           </dl>
           # endfor
-          <h2 id="Methods" class="section">RPC exported functions</h2>
-
-          <div id="searchable">
-            ## for="key in sorted(rpc.functions)
-            # for key in rpc.functions|sort:
-            <dl>
-              # set namespace = rpc.functions[key]
-              <h3 id="${'rpc.' + to_unicode(namespace.namespace)}" class="section">
-                ${namespace.namespace} - ${namespace.description}
-              </h3>
-              <dd>
-                <table class="listing tickets">
-                  <thead>
-                    <tr>
-                      <th style="width:40%">Function</th>
-                      <th style="width:45%">Description</th>
-                      <th style="width:15%">Permission required</th>
-                    </tr>
-                  </thead>
-                  # for function in namespace.methods:
-                  <tbody>
-                    <tr class="${'color3-' + (loop.index0 % 2 == 0 and 'even' or 'odd')}">
-                      <td style="padding-left:4em;text-indent:-4em">${function[0]}</td>
-                      <td>${function[1]}</td>
-                      <td>${function[2] or "By resource"}</td>
-                    </tr>
-                  </tbody>
-                  # endfor
-                </table>
-              </dd>
-            </dl>
-            # endfor
-          </div>
-
         </div>
       </div>
     </div>
-    ${ super() }
-    # endblock content
-  </body>
-</html>
+  </div>
+  ${ super() }
+# endblock content
